kubernetes/base/factorio/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      project: factorio
      component: server
  serviceName: factorio
  template:
    metadata:
      labels:
        project: factorio
        component: server
    spec:
      containers:
        - name: factorio
          image: factoriotools/factorio:2.0.10
          ports:
            - name: game
              containerPort: 34197
              protocol: UDP
            - name: rcon
              containerPort: 27015
              protocol: TCP
          volumeMounts:
            - name: factorio-saves
              mountPath: /factorio/saves/
            - name: factorio-secret
              mountPath: /factorio/config/
              subPath: rconpw
      volumes:
        - name: factorio-secret
          secret:
            secretName: server-secret
            items:
              - key: server-rconpw.txt
                path: rconpw
          
  volumeClaimTemplates:
    - metadata:
        name: factorio-saves
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 2Gi
