kubernetes/base/factorio/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio
spec:
  selector:
    project: factorio
    component: server
  ports:
    - protocol: TCP
      port: 34197
      targetPort: 34197
  #type: ClusterIP
